# stereo_slam

./: CMakeLists.txt  manifest.xml  stack.xml
include/stereo_slam/: features3d.h  features3d_extractor.h  features3d_pose_slam.h  image_proc.h  match_stats.h  orb_extractor.h  pose_node.h  stereo_matcher.h  stereo_matching.h  types.h
src/: features3d_pose_slam.cpp  match_stats.cpp  orb_extractor.cpp  stereo_matcher.cpp  stereo_matching.cpp
src/tools/: stereo_match.cpp  stereo_stats.cpp
stereo_slam/: mainpage.dox  manifest.xml
stereo_slam/include/stereo_slam/: features3d.h  features3d_extractor.h  pose_node.h  stereo_pose_slam.h
stereo_slam/src/: stereo_pose_slam.cpp
test/: image_proc_test.cpp  stereo_matching_test.cpp
